<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/mCategorias"
        android:title="@string/menu_categorias"
        android:orderInCategory="100"
        >
    </item>
    <item android:id="@+id/mMarcas"
        android:title="@string/menu_marcas"
        android:orderInCategory="101"
        >
    </item>
    <item android:id="@+id/mProductos"
        android:title="@string/menu_productos"
        android:orderInCategory="102"
        >
    </item>

    <item android:id="@+id/mAbout"
        android:title="@string/menu_about"
        android:orderInCategory="103"
        >
    </item>
    <item android:id="@+id/mSettings"
        android:title="@string/menu_settings"
        android:orderInCategory="104"
        >
    </item>

</menu>