<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <TextView
        android:id="@+id/lblRegUsuarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/lblreg_usuarios"
        android:textSize="32sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        app:srcCompat="@drawable/registrousuario" />

    <EditText
        android:id="@+id/txtDocUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="Ingresar Documento"
        android:inputType="textPersonName" />
    <EditText
        android:id="@+id/txtNomUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ingresar_nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtCiudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ingresar_ciudad"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ingresar_correo"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/registrarTxtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ingrese_password"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnRegUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar_usuario" />

    <Button
        android:id="@+id/btnConsultarUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Consultar" />

    <Button
        android:id="@+id/btnActualizarUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Actualizar"
        android:text="Actualizar" />

    <Button
        android:id="@+id/btnEliminarUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Eliminar"
        android:text="Eliminar" />

</LinearLayout>