<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#202732">



    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/social_network_icon" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        android:backgroundTint="@color/colorPrimary"/>

    <EditText
        android:id="@+id/mainTxtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_rounded"
        android:onClick="iniciarSesion"
        android:text="@string/iniciarsesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTxtPassword" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:text="@string/registrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciar"
        android:background="@drawable/button_rounded_border"/>

    <ImageButton
        android:id="@+id/imgBtnFacebook"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrar"
        app:srcCompat="@drawable/social_facebook_box_blue_icon"
        tools:ignore="SpeakableTextPresentCheck"
        android:background="@drawable/button_social"/>

    <ImageButton
        android:id="@+id/imgBtnGoogle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/imgBtnFacebook"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrar"
        app:srcCompat="@drawable/social_google_button_blue_icon"
        tools:ignore="SpeakableTextPresentCheck"
        android:background="@drawable/button_social"/>

    <ImageButton
        android:id="@+id/imgBtnTwitter"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/imgBtnFacebook"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrar"
        app:srcCompat="@drawable/social_twitter_button_blue_icon"
        tools:ignore="SpeakableTextPresentCheck"
        android:background="@drawable/button_social"/>

</androidx.constraintlayout.widget.ConstraintLayout>